fixes lot of bug due to column renaming
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1519 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_document_template_form.html.haml
+++ b/app/views/company/_document_template_form.html.haml
@@ -5,9 +5,9 @@
   -f.field :document_template, :family, :choices=>DocumentTemplate.families
   -f.field :document_template, :nature, :choices=>DocumentTemplate.natures
   -f.field :document_template, :to_archive
-  -f.field :document_template, :default
+  -f.field :document_template, :by_default
   -f.field :document_template, :active
-  -f.field :document_template, :language_id, :choices=>{:reflection=>:languages}
+  -f.field :document_template, :language, :choices=>languages
   -f.field :document_template, :country, :choices=>countries
   -f.field :document_template, :filename
   -f.field :document_template, :source, :field=>:textarea, :options=>{:cols=>80, :rows=>30}, :class=>:code
