--- a/app/views/company/_user_form.html.haml
+++ b/app/views/company/_user_form.html.haml
@@ -4,7 +4,7 @@
   -f.field :user, :last_name
   -f.field :user, :first_name
   -f.field :user, :email
-  -f.field :user, :language_id, :choices=>{:reflection=>:languages}
+  -f.field :user, :language, :choices=>languages
   -f.field :user, :name
   -f.field :user, :password
   -f.field :user, :password_confirmation
