--- a/app/views/relations/_entity_nature_form.html.haml
+++ b/app/views/relations/_entity_nature_form.html.haml
@@ -1,8 +1,9 @@
 = formalize do |f|
   - f.error :entity_nature
   - f.field :entity_nature, :name
-  - f.field :entity_nature, :abbreviation
+  - f.field :entity_nature, :title
   - f.field :entity_nature, :active
   - f.field :entity_nature, :physical
   - f.field :entity_nature, :in_name
+  - f.field :entity_nature, :format
   - f.field :entity_nature, :description, :field=>:textarea
