--- a/app/views/relations/entity_category.html.haml
+++ b/app/views/relations/entity_category.html.haml
@@ -5,7 +5,7 @@
   %tr
     %td
       =evalue @entity_category, :name
-      =evalue @entity_category, :default
+      =evalue @entity_category, :by_default
       =evalue @entity_category, :description
     
 %h2=tc :prices, :count=>@category_prices_count
