--- a/app/views/management/product.html.haml
+++ b/app/views/management/product.html.haml
@@ -15,7 +15,7 @@
       =evalue @product, :weight
       =evalue @product, :active
     %td
-      =evalue @product, :to if @product.to_sale or @product.to_purchase
+      =evalue @product, :to
       =#evalue @product, :catalog_name
       =#evalue @product, :catalog_description
       =evalue @product, :description
