--- a/app/views/relations/_contact_form.html.haml
+++ b/app/views/relations/_contact_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   -f.title :general
   -f.field :contact, :entity_id, :choices=>:entities, :new=>{:action=>:entity_create}
-  -f.field :contact, :default
+  -f.field :contact, :by_default
 =render :partial=>"coordinates_form", :locals => {:company => @current_company}
  
 
