--- a/app/views/relations/_entity_category_form.html.haml
+++ b/app/views/relations/_entity_category_form.html.haml
@@ -1,4 +1,4 @@
 =formalize do |f|
   -f.field :entity_category, :name
+  -f.field :entity_category, :by_default
   -f.field :entity_category, :description, :field=>:textarea
-  -f.field :entity_category, :default
