--- a/app/views/relations/entity.html.haml
+++ b/app/views/relations/entity.html.haml
@@ -40,7 +40,7 @@
   -tb.tab(tc(:contacts, :count=>@contacts_count)) do |c|
     -c << toolbar do
       -link(:contact_create, :entity_id=>@entity.id)
-    -c << dyta(:contacts)
+    -c << dyta(:entity_contacts)
   -tb.tab(tc(:sale_orders_number , :count=>@sale_orders_number)) do |c|
     -c << toolbar do |t|
       -t.link(:sale_order_create, :controller=>:management, :client_id=>@entity.id)
