--- a/app/views/management/_embankment_form.html.haml
+++ b/app/views/management/_embankment_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   - f.error :embankment
   - f.title :infos
-  - f.field :embankment, :cash_id, :choices=>{:reflection=>:self_cashes}, :new=>{:controller=>:accountancy, :action=>:cash_create}
+  - f.field :embankment, :cash_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:controller=>:accountancy, :action=>:cash_create, :nature=>:bank_account}
   - f.field :embankment, :embanker_id, :choices=>{:reflection=>:users}
   - f.field :embankment, :created_on
 
