--- a/app/views/management/_sale_payment_part_form.html.haml
+++ b/app/views/management/_sale_payment_part_form.html.haml
@@ -1,16 +1,8 @@
 =formalize do |f|
+  -f.error 'sale_payment_part'
   -f.field :sale_payment_part, :downpayment
-  -f.field content_tag(:label, tc("new_payment"), :for=>:new_payment), check_box_tag(:new_payment, "1", true)
+  -payment = @sale_payment_part.expense.payer.last_sale_payment || SalePayment.new
+  -f.field :sale_payment_part, :payment_id, :choices=>{:reflection=>:usable_sale_payments}, :new=>{:action=>:sale_payment_create, :payer_id=>@sale_payment_part.expense.payer.id, :amount=>@sale_payment_part.expense.unpaid_amount, :bank=>payment.bank, :account_number=>payment.account_number}
+=hidden_field_tag("expense_id", params[:expense_id])
+=hidden_field_tag("expense_type", params[:expense_type])
 
-#existing_payment
-  =formalize do |f|
-    -f.title tc(:select_existing_payment)
-    -f.field tc(:unused_payment), select(:pay, :part, @expense.usable_payments.collect{|x| [tc(:payment_label, :amount=>x.amount.to_s, :date=>x.created_at.to_date, :mode=>x.mode.name, :usable_amount=>x.unused_amount.to_s, :entity=>x.entity.full_name, :number=>x.number), x.id]})
-
-#create_payment=render :partial=>'sale_payment_form'
-
-:javascript
-  window.paymentToggle = function(){ toggleElement('create_payment', $('new_payment').checked, 'existing_payment'); };
-  paymentToggle();
-
-=observe_field "new_payment", :function=>"paymentToggle();", :frequency => 0.25
