--- a/app/views/management/purchase_order_summary.html.haml
+++ b/app/views/management/purchase_order_summary.html.haml
@@ -3,7 +3,7 @@
 -if @purchase_order.amount_with_taxes > 0
   %h2=tc :payments
   =toolbar do |t|
-    -t.link :purchase_payment_part_create, :expense_id=>@purchase_order.id if @purchase_order.updatable?
+    -t.link :purchase_payment_part_create, :expense_id=>@purchase_order.id # if @purchase_order.updatable?
   =dyta :purchase_order_payment_parts
 
 %h2=tc(:products)
