--- a/app/views/management/sale_order_summary.html.haml
+++ b/app/views/management/sale_order_summary.html.haml
@@ -1,10 +1,10 @@
 =sale_steps
 
-- if @sale_order.amount_with_taxes > 0
-  %h2=tc :payments
+%h2=tc :payments
+-unless @sale_order.complete?
   =toolbar do |t|
     -t.link :sale_payment_part_create, :expense_type=>:sale_order, :expense_id=>@sale_order.id
-  =dyta :sale_order_payment_parts
+=dyta :sale_order_payment_parts
 
 -if @sale_order.invoices.size>0
   %h2=tc :invoice
