Contiue to fix bugs and evolutions Always INSTABLE!
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1524 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_journals.html.haml
+++ b/app/views/accountancy/_journals.html.haml
@@ -11,5 +11,5 @@
                 %nobr
                   %strong=tc('journal_name', attributes)
               -else
-                %nobr=link_to(tc('journal_name', attributes), :action=>:journal, :controller=>:accountancy, :id=>journal.id)
+                %nobr=link_to(tc('journal_name', attributes), :action=>:journal, :controller=>:accountancy, :id=>journal.id, :start=>params[:start], :finish=>params[:finish])
             %nobr.journal-detail=tc('journal_detail', attributes)
