--- a/app/views/management/_sale_order_nature_form.html.haml
+++ b/app/views/management/_sale_order_nature_form.html.haml
@@ -4,7 +4,8 @@
   - f.field :sale_order_nature, :active
   - f.field :sale_order_nature, :comment, :field=>:textarea
   - f.title :conditions
-  - f.field :sale_order_nature, :payment_type, :choices=>SaleOrderNature.payment_types
+  - f.field :sale_order_nature, :payment_mode_id, :choices=>{:reflection=>:sale_payment_modes}, :new=>{:action=>:sale_payment_mode_create}
+  - f.field :sale_order_nature, :payment_mode_complement
   - f.field :sale_order_nature, :expiration_id, :choices=>{:reflection=>:delays}, :new=>{:action=>:delay_create}
   - f.field :sale_order_nature, :payment_delay_id, :choices=>{:reflection=>:delays}, :new=>{:action=>:delay_create}
   - f.field :sale_order_nature, :downpayment
