Add to_accountancy in PurchaseOrder. Need to change/update accountancy/accountize
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1526 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -52,6 +52,6 @@
     $('login').show();
 
 :javascript
-  $('user_name').select();
-  $('user_name').focus(); 
+  $('name').select();
+  $('name').focus(); 
 
