--- a/app/views/management/purchase_order_lines.html.haml
+++ b/app/views/management/purchase_order_lines.html.haml
@@ -36,4 +36,4 @@
   .actions
     =link_to tg(:previous), :action=>:purchase_orders
     - unless @purchase_order.shipped
-      =submit_tag(tc('validate'), :action=>:purchase_order_lines) if @purchase_order.lines.size>0
+      =submit_tag(tc('validate'), :action=>:purchase_order_lines, :confirm=>tg(:are_you_sure)) if @purchase_order.lines.size>0
