--- a/app/views/management/purchase_order.html.haml
+++ b/app/views/management/purchase_order.html.haml
@@ -1,6 +1,6 @@
 =toolbar do |t|
   -t.link :purchase_order_lines, :id=>@purchase_order.id
-  -t.link :purchase_payment_part_create, :expense_id=>@purchase_order.id if @purchase_order.payments_sum != @purchase_order.amount_with_taxes
+  -t.link :purchase_payment_part_create, :expense_id=>@purchase_order.id if @purchase_order.unpaid_amount > 0
   -t.print :purchase_order, :id=>@purchase_order.id
 
 %h2= tc 'general_informations'
