Begins to add the draft/fog notion. Less but always INSTABLE
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1527 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/journal.html.haml
+++ b/app/views/accountancy/journal.html.haml
@@ -28,9 +28,5 @@
         %td.submit{:rowspan=>2}=submit_tag tg(:search_go), :name=>nil
 
 =journal_view_tag
--if @journal_view == :entries
-  =dyta(:journal_entries)
--elsif @journal_view == :records
-  =dyta(:journal_records)
--elsif @journal_view == :mixed
-  =dyta(:journal_mixed)
+
+=dyta("journal_#{@journal_view}")
