--- a/app/views/accountancy/_journals.html.haml
+++ b/app/views/accountancy/_journals.html.haml
@@ -3,6 +3,14 @@
   .journals
     %table
       %tr
+        -if !@current_company.journal_entries.find_by_draft(true)
+          %td.journal
+            .journal-name
+              -if action_name=="draft"
+                %nobr
+                  %strong=tc('draft')
+              -else
+                %nobr=link_to(tc('draft'), :action=>:draft, :controller=>:accountancy, :start=>params[:start], :finish=>params[:finish])            
         -for journal in journals
           %td.journal{:class=>journal.nature}
             -attributes = {:name=>journal.name, :code=>journal.code, :nature_label=>journal.nature_label, :nature=>journal.nature, :closed_on=>::I18n.localize(journal.closed_on), :currency_code=>journal.currency.code, :currency_name=>journal.currency.name}
