Fixes some bugs and add better validation for accountancy security
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1528 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_journal_record_form.html.haml
+++ b/app/views/accountancy/_journal_record_form.html.haml
@@ -5,7 +5,9 @@
   -f.field JournalRecord.human_attribute_name("journal"), link_to(@journal_record.journal.name, :action=>:journal, :id=>@journal.id)
   -f.field :journal_record, :number
   -f.field :journal_record, :printed_on
+  -f.field :journal_record, :draft_mode
   -# f.field :journal_record, :created_on
+=hidden_field_tag "journal_id", params[:journal_id]
 %table.dyta{:style=>"margin-bottom: 8px;"}
   %thead
     %tr
