--- a/app/views/accountancy/draft_entries.html.haml
+++ b/app/views/accountancy/draft_entries.html.haml
@@ -1,1 +1,7 @@
-=dyta(:draft_entries)
+-form_tag(nil, {:flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
+  .fields{:flex=>10}
+    =journals_tag
+    .search=render :partial=>"journals_search"
+    =dyta(:draft_entries)
+  .actions
+    =submit_tag(tc(:validate_selected_entries), :confirm=>tg(:are_you_sure), :name=>:validate)
