--- a/app/views/accountancy/accountize.html.haml
+++ b/app/views/accountancy/accountize.html.haml
@@ -12,7 +12,7 @@
       -f.field tc(:select_date_generation), ::I18n.localize(params[:finish_accountization_on])
       -for nature in @natures
         -f.field tc("#{nature.to_s.pluralize}_count"), @records[nature].size
-      -f.field tc(:save_in_draft), check_box_tag("save_in_draft")
+      -f.field tc(:save_in_draft), check_box_tag("save_in_draft", "1", @current_company.draft_mode?)
     .actions
       =submit_tag(tg(:save))
       =link_to tg(:back), :action=>:accountize, :finish_accountization_on=>params[:finish_accountization_on]
