--- a/app/views/company/_rights_form.html.haml
+++ b/app/views/company/_rights_form.html.haml
@@ -4,8 +4,8 @@
   - for controller in menus.collect{|m| m[:name]}
     - rights = User.useful_rights[controller]
     - f.title tc("#{controller}_rights")
-    - for right in rights.sort{|a,b| a.to_s<=>b.to_s}
+    - for right in rights.sort{|a,b| t("rights.#{a}")<=>t("rights.#{b}")}
       - if not @rights.nil?
-        - f.field content_tag(:label, t("rights.#{right}"), :for=>"rights_#{right}"), check_box_tag("rights[#{right}]", "1", @rights.include?(right.to_sym), :id=>"rights_#{right}")
+        - f.field check_box_tag("rights[#{right}]", "1", @rights.include?(right.to_sym), :id=>"rights_#{right}"), content_tag(:label, t("rights.#{right}"), :for=>"rights_#{right}")
 
 
