--- a/app/views/management/invoice.html.haml
+++ b/app/views/management/invoice.html.haml
@@ -18,9 +18,9 @@
       = evalue @invoice, :origin, :label=>:number, :url=>{:action=>:invoice} if !@invoice.origin.nil?
 
 %h2= tc(:invoice_lines) 
-=dyta :invoice_credit_lines
+=dyta :invoice_lines
 
 
-- if !@invoice.credit and @invoice.credits.size > 0
+-if !@invoice.credit and @invoice.credits.size > 0
   %h2= tc(:credits)
-  =dyta :credits
+  =dyta :invoice_credits
